Add fycons: Storifycons, upload app, user groups.

--- a/fycons.html
+++ b/fycons.html
@@ -5,7 +5,7 @@
     <!-- <link href="../../dist/all.css" rel="stylesheet"> -->
     <!-- Use 1.x for the button example and 2.x for the add-plus example. -->
     <link rel="stylesheet" href="https://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.16/livefyre-bootstrap.min.css">
-    <link rel="stylesheet" href="https://rawgit.com/Livefyre/livefyre-bootstrap/2.0.0/dist/livefyre-bootstrap.min.css">
+    <link rel="stylesheet" href="https://rawgit.com/Livefyre/livefyre-bootstrap/2.0.2/dist/livefyre-bootstrap.min.css">
 
     <link rel="stylesheet" href="css/docs.css">
     <link rel="stylesheet" href="css/fycon.css">
@@ -205,6 +205,10 @@
           <input type="text" readonly="readonly" value="arrow-btn-picker">
         </li>
         <li>
+          <span class="fycon-arrow-btn-picker2" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="arrow-btn-picker2">
+        </li>
+        <li>
           <span class="fycon-arrow-down" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="arrow-down">
         </li>
@@ -325,6 +329,38 @@
           <input type="text" readonly="readonly" value="edit-2">
         </li>
         <li>
+          <span class="fycon-edited" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="edited">
+        </li>
+        <li>
+          <span class="fycon-editor-anchor" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="editor-anchor">
+        </li>
+        <li>
+          <span class="fycon-editor-header" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="editor-header">
+        </li>
+        <li>
+          <span class="fycon-editor-p-center" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="editor-p-center">
+        </li>
+        <li>
+          <span class="fycon-editor-p-left" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="editor-p-left">
+        </li>
+        <li>
+          <span class="fycon-editor-p-right" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="editor-p-right">
+        </li>
+        <li>
+          <span class="fycon-editor-quote" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="editor-quote">
+        </li>
+        <li>
+          <span class="fycon-editor-rule" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="editor-rule">
+        </li>
+        <li>
           <span class="fycon-email" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="email">
         </li>
@@ -363,6 +399,10 @@
         <li>
           <span class="fycon-folder-restricted" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="folder-restricted">
+        </li>
+        <li>
+          <span class="fycon-follow" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="follow">
         </li>
         <li>
           <span class="fycon-form-checkbox-active" aria-hidden="true"></span>
@@ -501,6 +541,10 @@
           <input type="text" readonly="readonly" value="icon-trending">
         </li>
         <li>
+          <span class="fycon-icon-upload-app" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="icon-upload-app">
+        </li>
+        <li>
           <span class="fycon-icon-wall" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="icon-wall">
         </li>
@@ -629,6 +673,10 @@
           <input type="text" readonly="readonly" value="logo-trending">
         </li>
         <li>
+          <span class="fycon-logo-upload-app" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="logo-upload-app">
+        </li>
+        <li>
           <span class="fycon-logo-windows" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="logo-windows">
         </li>
@@ -671,6 +719,14 @@
         <li>
           <span class="fycon-network" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="network">
+        </li>
+        <li>
+          <span class="fycon-new-story" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="new-story">
+        </li>
+        <li>
+          <span class="fycon-notify" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="notify">
         </li>
         <li>
           <span class="fycon-person" aria-hidden="true"></span>
@@ -749,6 +805,22 @@
           <input type="text" readonly="readonly" value="source-aol">
         </li>
         <li>
+          <span class="fycon-source-audioboo" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="source-audioboo">
+        </li>
+        <li>
+          <span class="fycon-source-breakingnews" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="source-breakingnews">
+        </li>
+        <li>
+          <span class="fycon-source-chute" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="source-chute">
+        </li>
+        <li>
+          <span class="fycon-source-disqus" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="source-disqus">
+        </li>
+        <li>
           <span class="fycon-source-drupal" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="source-drupal">
         </li>
@@ -763,6 +835,18 @@
         <li>
           <span class="fycon-source-foursquare" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="source-foursquare">
+        </li>
+        <li>
+          <span class="fycon-source-getty" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="source-getty">
+        </li>
+        <li>
+          <span class="fycon-source-gif" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="source-gif">
+        </li>
+        <li>
+          <span class="fycon-source-giphy" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="source-giphy">
         </li>
         <li>
           <span class="fycon-source-google" aria-hidden="true"></span>
@@ -805,8 +889,20 @@
           <input type="text" readonly="readonly" value="source-rss">
         </li>
         <li>
+          <span class="fycon-source-shutterstock" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="source-shutterstock">
+        </li>
+        <li>
+          <span class="fycon-source-slideshare" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="source-slideshare">
+        </li>
+        <li>
           <span class="fycon-source-soundcloud" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="source-soundcloud">
+        </li>
+        <li>
+          <span class="fycon-source-stocktwits" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="source-stocktwits">
         </li>
         <li>
           <span class="fycon-source-storify" aria-hidden="true"></span>
@@ -847,6 +943,10 @@
         <li>
           <span class="fycon-source-youtube2" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="source-youtube2">
+        </li>
+        <li>
+          <span class="fycon-source-zemanta" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="source-zemanta">
         </li>
         <li>
           <span class="fycon-spaceship" aria-hidden="true"></span>
@@ -903,6 +1003,10 @@
         <li>
           <span class="fycon-user-context" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="user-context">
+        </li>
+        <li>
+          <span class="fycon-user-groups" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="user-groups">
         </li>
         <li>
           <span class="fycon-users" aria-hidden="true"></span>
