--- a/v2.html
+++ b/v2.html
@@ -2,7 +2,7 @@
 <html class="lf">
   <head>
     <title>Livefyre Bootstrap Developer Docs</title>
-    <link rel="stylesheet" href="https://cdn.livefyre.com/libs/livefyre-bootstrap/v2.0.1/livefyre-bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.livefyre.com/libs/livefyre-bootstrap/v2.0.2/livefyre-bootstrap.min.css">
     <link rel="stylesheet" href="css/docs.css">
   </head>
   <body>
@@ -74,10 +74,10 @@
                 <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                   <div class="panel-body">
                     <p>In your <code>package.json</code> or <code>bower.json</code> file, add or update the <code>livefyre-bootstrap</code> dependency:
-                    <pre>"livefyre-bootstrap": "git+ssh://git@github.com/Livefyre/livefyre-bootstrap.git#2.0.1"</pre>
+                    <pre>"livefyre-bootstrap": "git+ssh://git@github.com/Livefyre/livefyre-bootstrap.git#2.0.2"</pre>
                     <p>Or, you can use the CDN urls:</p>
-                    <pre>https://cdn.livefyre.com/libs/livefyre-bootstrap/v2.0.1/livefyre-bootstrap.min.css
-https://cdn.livefyre.com/libs/livefyre-bootstrap/v2.0.1/livefyre-bootstrap.min.js</pre>
+                    <pre>https://cdn.livefyre.com/libs/livefyre-bootstrap/v2.0.2/livefyre-bootstrap.min.css
+https://cdn.livefyre.com/libs/livefyre-bootstrap/v2.0.2/livefyre-bootstrap.min.js</pre>
                   </div>
                 </div>
               </div>
@@ -1766,11 +1766,11 @@ loader.decorate($('#lfLoader-mini'), 'mini')</code></pre>
     <!-- Scripts -->
 
     <!--
-      Couldn't get the loader animation to work using the RequireJS method used on the other pages. We would need to pull in the 2.0.1 version of the src/loader.js file. However, loader.js uses RequireJS so we can't just pull in the 2.0.1 version via Rawgit. Sooo... let's just skip it for now and use all-CSS for the loader example.
+      Couldn't get the loader animation to work using the RequireJS method used on the other pages. We would need to pull in the 2.x version of the src/loader.js file. However, loader.js uses RequireJS so we can't just pull in the 2.x version via Rawgit. Sooo... let's just skip it for now and use all-CSS for the loader example.
     -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="https://cdn.livefyre.com/libs/livefyre-bootstrap/v2.0.1/livefyre-bootstrap.min.js"></script>    
+    <script src="https://cdn.livefyre.com/libs/livefyre-bootstrap/v2.0.2/livefyre-bootstrap.min.js"></script>    
  
     <script type="text/javascript">
       $('[data-toggle="tooltip"]').tooltip();
