Move old CSS to different directory.

--- a/fycons.html
+++ b/fycons.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="https://cdn.livefyre.com/libs/livefyre-bootstrap/v1.4.18/livefyre-bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.livefyre.com/libs/livefyre-bootstrap/v2.0.2/livefyre-bootstrap.min.css">
 
-    <link rel="stylesheet" href="css/docs.css">
-    <link rel="stylesheet" href="css/fycon.css">
+    <link rel="stylesheet" href="styles/docs.css">
+    <link rel="stylesheet" href="styles/fycon.css">
   </head>
   <body>
     <header class="menu sticky">
