--- a/v2.html
+++ b/v2.html
@@ -3,7 +3,7 @@
   <head>
     <title>Livefyre Bootstrap Developer Docs</title>
     <link rel="stylesheet" href="https://cdn.livefyre.com/libs/livefyre-bootstrap/v2.0.2/livefyre-bootstrap.min.css">
-    <link rel="stylesheet" href="css/docs.css">
+    <link rel="stylesheet" href="styles/docs.css">
   </head>
   <body>
     <header class="menu sticky">
