--- a/components.html
+++ b/components.html
@@ -4,7 +4,7 @@
     <title>Livefyre Bootstrap Developer Docs</title>
     <!-- <link href="../../dist/all.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://cdn.livefyre.com/libs/livefyre-bootstrap/v1.4.18/livefyre-bootstrap.min.css">
-    <link rel="stylesheet" href="css/docs.css">
+    <link rel="stylesheet" href="styles/docs.css">
   </head>
   <body>
     <header class="menu sticky">
