--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Livefyre Bootstrap Developer Docs</title>
     <!-- <link href="../../dist/all.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://cdn.livefyre.com/libs/livefyre-bootstrap/v1.4.18/livefyre-bootstrap.min.css">
-    <link rel="stylesheet" href="css/docs.css">
-    <link rel="stylesheet" href="css/fycon.css">
+    <link rel="stylesheet" href="styles/docs.css">
+    <link rel="stylesheet" href="styles/fycon.css">
   </head>
   <body>
     <header class="menu sticky">
