--- a/elements/buttons.html
+++ b/elements/buttons.html
@@ -13,21 +13,8 @@ title: Buttons | Livefyre Bootstrap
     <h4>Default Button</h4>
 
     <div class="well">
-      <button class="btn btn-link pull-right btn-react" type="button" data-toggle="collapse" data-target="#buttons-default-react" aria-expanded="false" aria-controls="collapseExample" data-hover="tooltip" data-placement="top" data-delay="300" data-title="React">
-        <svg version="1.1" width="20px" height="18px" viewBox="0 0 184 166">
-          <g transform="translate(92 83)">
-            <circle fill="#2f3440" r="16" />
-            <g fill="none" stroke="#2f3440" stroke-width="8">
-              <ellipse rx="84" ry="32" />
-              <ellipse rx="84" ry="32" transform="rotate(120)" />
-              <ellipse rx="84" ry="32" transform="rotate(60)" />
-            </g>
-          </g>
-        </svg>
-      </button>
-      <button class="btn btn-link pull-right" type="button" data-toggle="collapse" data-target="#buttons-default-html" aria-expanded="false" aria-controls="collapseExample" data-hover="tooltip" data-placement="top" data-delay="300" data-title="HTML">
-        <span class="fycon-embed fycon-xl" aria-hidden="true"></span>
-      </button>
+      {% include btn-toggle-code.html target="buttons-default" %}
+
       <button class="btn btn-default">Default</button>
 
       <div class="collapse" id="buttons-default-html">
@@ -49,21 +36,7 @@ title: Buttons | Livefyre Bootstrap
     <p>The exception is the new Hollow button. It's semi-transparent so it looks slick on top of a photo.</p>
 
     <div class="well">
-      <button class="btn btn-link pull-right btn-react" type="button" data-toggle="collapse" data-target="#buttons-colors-react" aria-expanded="false" aria-controls="collapseExample" data-hover="tooltip" data-placement="top" data-delay="300" data-title="React">
-        <svg version="1.1" width="20px" height="18px" viewBox="0 0 184 166">
-          <g transform="translate(92 83)">
-            <circle fill="#2f3440" r="16" />
-            <g fill="none" stroke="#2f3440" stroke-width="8">
-              <ellipse rx="84" ry="32" />
-              <ellipse rx="84" ry="32" transform="rotate(120)" />
-              <ellipse rx="84" ry="32" transform="rotate(60)" />
-            </g>
-          </g>
-        </svg>
-      </button>
-      <button class="btn btn-link pull-right" type="button" data-toggle="collapse" data-target="#buttons-colors-html" aria-expanded="false" aria-controls="collapseExample" data-hover="tooltip" data-placement="top" data-delay="300" data-title="HTML">
-        <span class="fycon-embed fycon-xl" aria-hidden="true"></span>
-      </button>
+      {% include btn-toggle-code.html target="buttons-colors" %}
 
       <button class="btn btn-primary">Primary</button>
       <button class="btn btn-warning">Warning</button>
@@ -99,21 +72,8 @@ title: Buttons | Livefyre Bootstrap
     <h4>Disabled Buttons</h4>
 
     <div class="well">
-      <button class="btn btn-link pull-right btn-react" type="button" data-toggle="collapse" data-target="#buttons-disabled-react" aria-expanded="false" aria-controls="collapseExample" data-hover="tooltip" data-placement="top" data-delay="300" data-title="React">
-        <svg version="1.1" width="20px" height="18px" viewBox="0 0 184 166">
-          <g transform="translate(92 83)">
-            <circle fill="#2f3440" r="16" />
-            <g fill="none" stroke="#2f3440" stroke-width="8">
-              <ellipse rx="84" ry="32" />
-              <ellipse rx="84" ry="32" transform="rotate(120)" />
-              <ellipse rx="84" ry="32" transform="rotate(60)" />
-            </g>
-          </g>
-        </svg>
-      </button>
-      <button class="btn btn-link pull-right" type="button" data-toggle="collapse" data-target="#buttons-disabled-html" aria-expanded="false" aria-controls="collapseExample" data-hover="tooltip" data-placement="top" data-delay="300" data-title="HTML">
-        <span class="fycon-embed fycon-xl" aria-hidden="true"></span>
-      </button>
+      {% include btn-toggle-code.html target="buttons-disabled" %}
+
       <button class="btn btn-default" disabled="disabled">Disabled</button>
       <button class="btn btn-primary" disabled="disabled">Disabled</button>
 
@@ -137,21 +97,8 @@ title: Buttons | Livefyre Bootstrap
     <p>There are 3 additional sizes as well as a full-width block-level button size. These are designed to match input and form control heights.</p>
 
     <div class="well">
-      <button class="btn btn-link pull-right btn-react" type="button" data-toggle="collapse" data-target="#buttons-sizes-react" aria-expanded="false" aria-controls="collapseExample" data-hover="tooltip" data-placement="top" data-delay="300" data-title="React">
-        <svg version="1.1" width="20px" height="18px" viewBox="0 0 184 166">
-          <g transform="translate(92 83)">
-            <circle fill="#2f3440" r="16" />
-            <g fill="none" stroke="#2f3440" stroke-width="8">
-              <ellipse rx="84" ry="32" />
-              <ellipse rx="84" ry="32" transform="rotate(120)" />
-              <ellipse rx="84" ry="32" transform="rotate(60)" />
-            </g>
-          </g>
-        </svg>
-      </button>
-      <button class="btn btn-link pull-right" type="button" data-toggle="collapse" data-target="#buttons-sizes-html" aria-expanded="false" aria-controls="collapseExample" data-hover="tooltip" data-placement="top" data-delay="300" data-title="HTML">
-        <span class="fycon-embed fycon-xl" aria-hidden="true"></span>
-      </button>
+      {% include btn-toggle-code.html target="buttons-sizes" %}
+
       <p>
         <button class="btn btn-default btn-lg">Large</button>
         <button class="btn btn-default">Default</button>
@@ -194,21 +141,7 @@ title: Buttons | Livefyre Bootstrap
     <p>Use these classes in the fycon's span container.</p>
 
     <div class="well">
-      <button class="btn btn-link pull-right btn-react" type="button" data-toggle="collapse" data-target="#buttons-fycons-react" aria-expanded="false" aria-controls="collapseExample" data-hover="tooltip" data-placement="top" data-delay="300" data-title="React">
-        <svg version="1.1" width="20px" height="18px" viewBox="0 0 184 166">
-          <g transform="translate(92 83)">
-            <circle fill="#2f3440" r="16" />
-            <g fill="none" stroke="#2f3440" stroke-width="8">
-              <ellipse rx="84" ry="32" />
-              <ellipse rx="84" ry="32" transform="rotate(120)" />
-              <ellipse rx="84" ry="32" transform="rotate(60)" />
-            </g>
-          </g>
-        </svg>
-      </button>
-      <button class="btn btn-link pull-right" type="button" data-toggle="collapse" data-target="#buttons-fycons-html" aria-expanded="false" aria-controls="collapseExample" data-hover="tooltip" data-placement="top" data-delay="300" data-title="HTML">
-        <span class="fycon-embed fycon-xl" aria-hidden="true"></span>
-      </button>
+      {% include btn-toggle-code.html target="buttons-fycons" %}
 
       <button class="btn btn-default">
         <span class="fycon-action-like fycon-xs" aria-hidden="true"></span> Extra Small
@@ -268,21 +201,8 @@ var Fycon = require('../Fycon'); // Custom LF component
     <p>Use the <code>.add-plus</code> class to add a small "+" next to the Fycon. Works with different fycon sizes.</p>
 
     <div class="well">
-      <button class="btn btn-link pull-right btn-react" type="button" data-toggle="collapse" data-target="#buttons-plus-react" aria-expanded="false" aria-controls="collapseExample" data-hover="tooltip" data-placement="top" data-delay="300" data-title="React">
-        <svg version="1.1" width="20px" height="18px" viewBox="0 0 184 166">
-          <g transform="translate(92 83)">
-            <circle fill="#2f3440" r="16" />
-            <g fill="none" stroke="#2f3440" stroke-width="8">
-              <ellipse rx="84" ry="32" />
-              <ellipse rx="84" ry="32" transform="rotate(120)" />
-              <ellipse rx="84" ry="32" transform="rotate(60)" />
-            </g>
-          </g>
-        </svg>
-      </button>
-      <button class="btn btn-link pull-right" type="button" data-toggle="collapse" data-target="#buttons-plus-html" aria-expanded="false" aria-controls="collapseExample" data-hover="tooltip" data-placement="top" data-delay="300" data-title="HTML">
-        <span class="fycon-embed fycon-xl" aria-hidden="true"></span>
-      </button>
+      {% include btn-toggle-code.html target="buttons-plus" %}
+
       <button class="btn btn-default">
         <span class="fycon-folder fycon-lg add-plus" aria-hidden="true"></span> New Folder
       </button>
