Fix default button header to match other pages.

--- a/elements/buttons.html
+++ b/elements/buttons.html
@@ -10,7 +10,7 @@ title: Buttons | Livefyre Bootstrap
   <h3>Types</h3>
 
   <div id="buttons-default" class="item">
-    <h4>Default Button</h4>
+    <h4>Default</h4>
 
     <div class="well">
       {% include btn-toggle-code.html target="buttons-default" %}
