Replace references to .jsx with .js.

--- a/v2.html
+++ b/v2.html
@@ -1759,7 +1759,7 @@ loader.decorate($('#lfLoader-mini'), 'mini')</code></pre>
 
             <h3>Usage</h3>
             <ul class="descrip">
-              <li>Markup is taken from our React component <code>Simple.jsx</code>, used in Asset Manager.</li>
+              <li>Markup is taken from our React component <code>Simple.js</code>, used in Asset Manager.</li>
               <li>The component's width is determined by its container. Each example below is wrapped in a <code>&lt;div class="col-md-6"&gt;</code>.</li>
             </ul>
 
@@ -1782,7 +1782,7 @@ loader.decorate($('#lfLoader-mini'), 'mini')</code></pre>
 &lt;/div&gt;</code></pre>
             </div>        
 
-            <p class="descrip">This is what it looks like with the loader rendered by Asset Manager's <code>Simple.jsx</code>. Note the addition of a <code>&lt;div class="input-group"&gt;</code> wrapper.</p>
+            <p class="descrip">This is what it looks like with the loader rendered by Asset Manager's <code>Simple.js</code>. Note the addition of a <code>&lt;div class="input-group"&gt;</code> wrapper.</p>
             <div class="bs-example">
               <div class="row">
                 <div class="col-md-6">
