Add usage section to Labels.

--- a/elements/labels.html
+++ b/elements/labels.html
@@ -6,7 +6,11 @@ title: Labels | Livefyre Bootstrap
 <section id="labels">
 
   <h1 class="page-heading">Labels</h1>
-  <p>Labels are commonly used as tags in our UI.</p>
+
+  <div class="item">
+    <h4>Usage</h4>
+    <p>Labels are commonly used as tags in our UI.</p>
+  </div>
 
   <div id="labels-default" class="item">
     <h4>Default</h4>
