Add 'Whats New in 2.x' and links to Bootstrap Docs.

--- a/elements/buttons.html
+++ b/elements/buttons.html
@@ -7,6 +7,24 @@ title: Buttons | Livefyre Bootstrap
 
   <h1 class="page-heading">Buttons</h1>
 
+  {% include btn-reference.html target="buttons" docs="css/#buttons" %}
+
+  <div class="collapse" id="buttons-changes">
+    <div class="inner">
+      <div class="well">
+        <h4>What's New in v2.x</h4>
+        <ul>
+          <li>New semi-transparent <code>.btn-hollow</code> style.</li>
+          <li>Attach a plus symbol next to a fycon using the <code>.add-plus</code> class.</li>
+          <li>Improved ability to fine tune fycon sizes.</li>
+          <li>Improved vertical centering.</li>
+          <li>Constructed using new button height variables (@btn-height-lg: 46px) instead of vertical padding to ensure better button height consistency.</li>
+          <li>All buttons now have the same border-radius (2px).</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
   <h3>Types</h3>
 
   <div id="buttons-default" class="item">
