--- a/elements/overview.html
+++ b/elements/overview.html
@@ -8,10 +8,10 @@ title: v2 Overview | Livefyre Bootstrap
   <h1 class="page-heading">Livefyre Bootstrap <small>v2.0.2</small></h1>
 
   <div id="overview-about" class="item">
-    <h4>About v2.x</h4>
+    <h4>Background</h4>
     <ul>
-      <li>This version of Livefyre Bootstrap was updated to support the creation of Asset Manager. Version 1.x still exists separately and will be maintained until the rest of Studio and our apps migrate to 2.x.</li>
-      <li>Version 2.x currently lives on the <a href="https://github.com/Livefyre/livefyre-bootstrap/tree/2.x" target="_blank"><code>2.x</code> branch on Github</a>. The 1.x version still lives on the <code>master</code> branch for now.</li>
+      <li>This version of Livefyre Bootstrap was updated to support the creation of Asset Manager.</li>
+      <li>Version 1.x still exists separately and will be maintained until the rest of Studio and our apps migrate to 2.x.</li>
     </ul>
   </div>
 
@@ -26,8 +26,18 @@ https://cdn.livefyre.com/libs/livefyre-bootstrap/v2.0.2/livefyre-bootstrap.min.j
   </div>
 
 
+  <div id="overview-contributing" class="item">
+    <h4>Contributing</h4>
+    <ul>
+      <li>Version 2.x currently lives on the <a href="https://github.com/Livefyre/livefyre-bootstrap/tree/2.x" target="_blank"><code>2.x</code> branch on Github</a>.</li>
+      <li>Version 1.x still lives on the <code>master</code> branch for now.</li>
+      <li>Do <strong>NOT</strong> push directly to either of these branches. Instead, please create a <code>feature-branch</code> and submit a pull request. Jenkins watches these branches to execute builds, tests and to generate CDN files. If merges are not done properly, there will be breakage.</li>
+    </ul>
+  </div>
+
+
   <div id="overview-changes" class="item">
-    <h4>Changes from v1.x</h4>
+    <h4>What's New in v2.x</h4>
     <ul>
       <li>Removes the <code>lf-</code> prefix from all CSS classes, markup and JS. This makes it easier to update to the latest [Twitter] Bootstrap version, removes a lot of redundant CSS and allows us to take advantage of all [Twitter] Bootstrap features.</li>
       <li>Updates the [Twitter] Bootstrap version to 3.3.4 (from 3.0.3).</li>
