Fix dependency URL

--- a/elements/overview.html
+++ b/elements/overview.html
@@ -19,7 +19,7 @@ title: v2 Overview | Livefyre Bootstrap
   <div id="overview-usage" class="item">
     <h4>Usage</h4>
     <p>In your <code>package.json</code> or <code>bower.json</code> file, add or update the <code>livefyre-bootstrap</code> dependency:</p>
-    <pre>"livefyre-bootstrap": "git+ssh://git@github.com/Livefyre/livefyre-bootstrap.git#2.0.2"</pre>
+    <pre>"livefyre-bootstrap": "git+ssh://git@github.com/Livefyre/livefyre-bootstrap.git#v2.0.2"</pre>
     <p>Or, you can use the CDN urls:</p>
     <pre>https://cdn.livefyre.com/libs/livefyre-bootstrap/v2.0.2/livefyre-bootstrap.min.css
 https://cdn.livefyre.com/libs/livefyre-bootstrap/v2.0.2/livefyre-bootstrap.min.js</pre>
