Minor copy update.

--- a/elements/search-forms.html
+++ b/elements/search-forms.html
@@ -210,7 +210,7 @@ var QueryInput = require('../text-input/Simple');
       </div>
 
       <div class="collapse" id="search-forms-sizes-react">
-        {% highlight html %}Not yet available via the React component.{% endhighlight %}
+        {% highlight html %}Not yet available via our React components.{% endhighlight %}
       </div>
     </div>
   </div>
